# Trama

./: .gitignore  ARCHITECTURE.md  README.md  build.gradle.kts  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/asr/moonshine/: README.txt  tokens.txt
app/src/main/assets/asr/speaker/: README.txt
app/src/main/assets/asr/whisper/: README.txt
app/src/main/assets/model-es/: uuid
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/mydiary/app/: GeminiConfig.kt  MainActivity.kt  MyDiaryApplication.kt  NotificationConfig.kt
app/src/main/java/com/mydiary/app/backup/: AutoBackupWorker.kt  BackupManager.kt  BackupScheduler.kt
app/src/main/java/com/mydiary/app/receiver/: BootReceiver.kt
app/src/main/java/com/mydiary/app/service/: KeywordListenerService.kt  RecordingService.kt  RecordingState.kt  ServiceController.kt
app/src/main/java/com/mydiary/app/speech/: AudioRecorder.kt  EntryValidator.kt  GeminiProcessor.kt  IntentDetector.kt  IntentPattern.kt  KeywordDetector.kt  OnDeviceSpeechTranscriber.kt  PersonalDictionary.kt  SpeakerEnrollment.kt  SpeechEngine.kt  TranscriptionEngine.kt  VoiceActivityDetector.kt  VoskModelManager.kt  WhisperEngine.kt
app/src/main/java/com/mydiary/app/summary/: ActionExecutor.kt  ActionItemProcessor.kt  CalendarHelper.kt  DailySummaryWorker.kt  GemmaClient.kt  GemmaModelManager.kt  JsonRepair.kt  RecordingProcessor.kt  RecordingProcessorWorker.kt  SuggestedAction.kt  SummaryGenerator.kt  SummaryScheduler.kt
app/src/main/java/com/mydiary/app/sync/: MicCoordinator.kt  PhoneToWatchSyncer.kt  SettingsSyncer.kt  WatchDataReceiverService.kt
app/src/main/java/com/mydiary/app/ui/: DatabaseProvider.kt  NavGraph.kt  SettingsDataStore.kt
app/src/main/java/com/mydiary/app/util/: KeepHelper.kt
app/src/main/java/com/trama/app/: GeminiConfig.kt  MainActivity.kt  NotificationConfig.kt  TramaApplication.kt
app/src/main/java/com/trama/app/audio/: AssetFileCache.kt  CircularAudioBuffer.kt  ContextualAudioCaptureEngine.kt  ContextualAudioModels.kt  ContextualCaptureAssembler.kt  ContextualCapturePolicy.kt  LightweightGateAsr.kt  NoOpAsrEngine.kt  NoOpLightweightGateAsr.kt  OfflineDictationCapture.kt  OnDeviceAsrEngine.kt  SherpaMoonshineGateAsr.kt  SherpaWhisperAsrEngine.kt  VoskGateAsr.kt
app/src/main/java/com/trama/app/backup/: AutoBackupWorker.kt  BackupManager.kt  BackupScheduler.kt
app/src/main/java/com/trama/app/chat/: ChatAnswerComposer.kt  ChatContextRetriever.kt  ChatFactsFormatter.kt  (+4 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: font_certs.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
shared/: build.gradle.kts
wear/: build.gradle.kts  proguard-rules.pro
wear/src/main/: AndroidManifest.xml
wear/src/main/java/com/mydiary/wear/: MyDiaryWearApplication.kt  NotificationConfig.kt
wear/src/main/java/com/trama/wear/: NotificationConfig.kt  TramaWearApplication.kt
wear/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
wear/src/main/res/values/: strings.xml
(+286 files in other folders)
